@@ -30,7 +30,7 @@ import org.craftercms.studio.api.v2.annotation.SiteId;
 import org.craftercms.studio.api.v2.dal.Dependency;
 import org.craftercms.studio.api.v2.dal.DependencyDAO;
 import org.craftercms.studio.api.v2.dal.RetryingDatabaseOperationFacade;
-import org.craftercms.studio.api.v2.service.dependency.internal.DependencyServiceInternal;
+import org.craftercms.studio.api.v2.service.dependency.DependencyService;
 import org.craftercms.studio.api.v2.service.item.internal.ItemServiceInternal;
 import org.craftercms.studio.api.v2.utils.StudioConfiguration;
 import org.craftercms.studio.impl.v1.util.ContentUtils;
@@ -45,17 +45,12 @@ import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
-import static org.apache.commons.lang3.StringUtils.removeEnd;
-import static org.craftercms.studio.api.v1.constant.DmConstants.SLASH_INDEX_FILE;
-import static org.craftercms.studio.api.v1.constant.StudioConstants.FILE_SEPARATOR;
-import static org.craftercms.studio.api.v1.constant.StudioConstants.INDEX_FILE;
-import static org.craftercms.studio.api.v2.dal.DependencyDAO.SOURCE_PATH_COLUMN_NAME;
 import static org.craftercms.studio.api.v2.dal.DependencyDAO.TARGET_PATH_COLUMN_NAME;
 import static org.craftercms.studio.api.v2.dal.ItemState.MODIFIED_MASK;
 import static org.craftercms.studio.api.v2.dal.ItemState.NEW_MASK;
 import static org.craftercms.studio.api.v2.utils.StudioConfiguration.CONFIGURATION_DEPENDENCY_ITEM_SPECIFIC_PATTERNS;
 
-public class DependencyServiceInternalImpl implements DependencyServiceInternal {
+public class DependencyServiceInternalImpl implements DependencyService {
 
     private static final Logger logger = LoggerFactory.getLogger(DependencyServiceInternalImpl.class);
     private static final String UPSERT_DEPENDENCIES_LOCK = ":upsertDependencies";
@@ -70,7 +65,7 @@ public class DependencyServiceInternalImpl implements DependencyServiceInternal 
 
     @Override
     @LogExecutionTime
-    public Collection<String> getSoftDependencies(String site, List<String> paths) {
+    public Collection<String> getSoftDependencies(String site, Collection<String> paths) {
         logger.trace("Get all soft dependencies for site '{}' paths '{}'", site, paths);
         Set<String> pathsParams = new HashSet<>(paths);
         Set<String> result = new HashSet<>();
@@ -97,12 +92,20 @@ public class DependencyServiceInternalImpl implements DependencyServiceInternal 
 
     @Override
     @RequireSiteExists
-    public List<String> getHardDependencies(@SiteId String site, List<String> paths) {
-        Map<String, String> dependencies = calculateHardDependencies(site, paths);
-        return new ArrayList<>(dependencies.keySet());
+    public Collection<String> getHardDependencies(@SiteId String site, String publishingTarget, Collection<String> paths) {
+        boolean isLiveTarget = StringUtils.equals(servicesConfig.getLiveEnvironment(site), publishingTarget);
+        return dependencyDao.getHardDependenciesForList(site, publishingTarget, paths,
+                getItemSpecificDependenciesPatterns(), isLiveTarget);
     }
 
-    /**
+    @Override
+    public Collection<String> getHardDependencies(String site, Collection<String> paths) {
+        String liveTarget = servicesConfig.getLiveEnvironment(site);
+        // Default to live target for backwards compatibility
+        return getHardDependencies(site, liveTarget, paths);
+    }
+
+    /*
      * Get the list of mandatory parents for publishing the given paths.
      * A mandatory parent is any ancestor page that has
      * never been published (it is either new or moved)
@@ -111,80 +114,77 @@ public class DependencyServiceInternalImpl implements DependencyServiceInternal 
      * @param paths list of paths to publish
      * @return list of mandatory parents
      */
-    private List<String> getMandatoryParents(final String site, final List<String> paths) {
-        Set<String> possibleParents = new HashSet<>();
-        for (String path : paths) {
-            StringTokenizer stPath = new StringTokenizer(removeEnd(path, SLASH_INDEX_FILE), FILE_SEPARATOR);
-            StringBuilder candidate = new StringBuilder(FILE_SEPARATOR);
-            stPath.asIterator().forEachRemaining(token -> {
-                candidate.append(token).append(FILE_SEPARATOR);
-                possibleParents.add(candidate + INDEX_FILE);
-            });
-        }
-        List<String> allPaths = new ArrayList<>(paths);
-        allPaths.addAll(possibleParents);
+//    private List<String> getMandatoryParents(final String site, final Collection<String> paths) {
+//        Set<String> possibleParents = new HashSet<>();
+//        for (String path : paths) {
+//            StringTokenizer stPath = new StringTokenizer(removeEnd(path, SLASH_INDEX_FILE), FILE_SEPARATOR);
+//            StringBuilder candidate = new StringBuilder(FILE_SEPARATOR);
+//            stPath.asIterator().forEachRemaining(token -> {
+//                candidate.append(token).append(FILE_SEPARATOR);
+//                possibleParents.add(candidate + INDEX_FILE);
+//            });
+//        }
+//        List<String> allPaths = new ArrayList<>(paths);
+//        allPaths.addAll(possibleParents);
+//
+//        return itemServiceInternal.getMandatoryParentsForPublishing(site, allPaths);
+//    }
 
-        return itemServiceInternal.getMandatoryParentsForPublishing(site, allPaths);
-    }
+//    private Map<String, String> calculateHardDependencies(String site, Collection<String> paths) {
+//        // TODO: refactor this to get as much as possible from the DB
+//        // TODO: prevent this method from returning folder paths
+//        Set<String> toRet = new HashSet<>();
+//
+//        logger.trace("Get all hard dependencies for site '{}' paths '{}'", site, paths);
+//        Set<String> pathsParams = new HashSet<>(paths);
+//        List<String> mandatoryParents = getMandatoryParents(site, paths);
+//        List<String> mpAsList = new ArrayList<>(mandatoryParents);
+//        Map<String, String> ancestors = new HashMap<>();
+//        if (isNotEmpty(mandatoryParents)) {
+//            pathsParams.addAll(mandatoryParents);
+//            Set<String> existingRenamedChildrenOfMandatoryParents =
+//                    getExistingRenamedChildrenOfMandatoryParents(site, mpAsList);
+//            for (String p3 : existingRenamedChildrenOfMandatoryParents) {
+//                ancestors.put(p3, p3);
+//            }
+//            pathsParams.addAll(existingRenamedChildrenOfMandatoryParents);
+//        }
+//        boolean exitCondition = false;
+//
+//        for (String p : mandatoryParents) {
+//            String prefix = p.replace(FILE_SEPARATOR + INDEX_FILE, "");
+//            for (String p2 : paths) {
+//                if (p2.startsWith(prefix)) {
+//                    ancestors.put(p, p2);
+//                    break;
+//                }
+//            }
+//
+//        }
+//        do {
+//            List<Map<String, String>> deps = calculateHardDependenciesForListFromDB(site, pathsParams);
+//            List<String> targetPaths = new ArrayList<>();
+//            for (Map<String, String> d : deps) {
+//                String srcPath = d.get(SOURCE_PATH_COLUMN_NAME);
+//                String targetPath = d.get(TARGET_PATH_COLUMN_NAME);
+//                if (!ancestors.containsKey(targetPath) &&
+//                        !StringUtils.equals(targetPath, ancestors.get(srcPath))) {
+//                    ancestors.put(targetPath, ancestors.get(srcPath));
+//                }
+//                targetPaths.add(targetPath);
+//            }
+//            exitCondition = !toRet.addAll(targetPaths);
+//            pathsParams.clear();
+//            pathsParams.addAll(targetPaths);
+//        } while (!exitCondition);
+//
+//        return ancestors;
+//    }
 
-    private Map<String, String> calculateHardDependencies(String site, List<String> paths) {
-        Set<String> toRet = new HashSet<>();
-
-        logger.trace("Get all hard dependencies for site '{}' paths '{}'", site, paths);
-        Set<String> pathsParams = new HashSet<>(paths);
-        List<String> mandatoryParents = getMandatoryParents(site, paths);
-        List<String> mpAsList = new ArrayList<>(mandatoryParents);
-        Map<String, String> ancestors = new HashMap<>();
-        if (isNotEmpty(mandatoryParents)) {
-            pathsParams.addAll(mandatoryParents);
-            Set<String> existingRenamedChildrenOfMandatoryParents =
-                    getExistingRenamedChildrenOfMandatoryParents(site, mpAsList);
-            for (String p3 : existingRenamedChildrenOfMandatoryParents) {
-                ancestors.put(p3, p3);
-            }
-            pathsParams.addAll(existingRenamedChildrenOfMandatoryParents);
-        }
-        boolean exitCondition = false;
-
-        for (String p : mandatoryParents) {
-            String prefix = p.replace(FILE_SEPARATOR + INDEX_FILE, "");
-            for (String p2 : paths) {
-                if (p2.startsWith(prefix)) {
-                    ancestors.put(p, p2);
-                    break;
-                }
-            }
-
-        }
-        do {
-            List<Map<String, String>> deps = calculateHardDependenciesForListFromDB(site, pathsParams);
-            List<String> targetPaths = new ArrayList<>();
-            for (Map<String, String> d : deps) {
-                String srcPath = d.get(SOURCE_PATH_COLUMN_NAME);
-                String targetPath = d.get(TARGET_PATH_COLUMN_NAME);
-                if (!ancestors.containsKey(targetPath) &&
-                        !StringUtils.equals(targetPath, ancestors.get(srcPath))) {
-                    ancestors.put(targetPath, ancestors.get(srcPath));
-                }
-                targetPaths.add(targetPath);
-            }
-            exitCondition = !toRet.addAll(targetPaths);
-            pathsParams.clear();
-            pathsParams.addAll(targetPaths);
-        } while (!exitCondition);
-
-        return ancestors;
-    }
-
-    private Set<String> getExistingRenamedChildrenOfMandatoryParents(String site, List<String> paths) {
-        Set<String> toRet = new HashSet<>(itemServiceInternal.getExistingRenamedChildrenOfMandatoryParentsForPublishing(site, paths));
-        return toRet;
-    }
-
-    private List<Map<String, String>> calculateHardDependenciesForListFromDB(String site, Set<String> paths) {
-        return dependencyDao.getHardDependenciesForList(site, paths, getItemSpecificDependenciesPatterns(),
-                MODIFIED_MASK, NEW_MASK);
-    }
+//    private Set<String> getExistingRenamedChildrenOfMandatoryParents(String site, List<String> paths) {
+//        Set<String> toRet = new HashSet<>(itemServiceInternal.getExistingRenamedChildrenOfMandatoryParentsForPublishing(site, paths));
+//        return toRet;
+//    }
 
     @Override
     public List<String> getDependentPaths(String siteId, List<String> paths) {
@@ -198,18 +198,11 @@ public class DependencyServiceInternalImpl implements DependencyServiceInternal 
     @Override
     public List<DependencyItem> getDependentItems(String siteId, String path) {
         List<String> dependentPaths = dependencyDao.getDependentItems(siteId, Collections.singletonList(path))
-                .stream().distinct().collect(Collectors.toList());
+                .stream().distinct().toList();
 
         return dependentPaths.stream()
                 .map(dep -> DependencyItem.getInstance(itemServiceInternal.getItem(siteId, dep)))
                 .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<String> getItemSpecificDependencies(String siteId, String path) {
-        List<String> paths = new ArrayList<>(1);
-        paths.add(path);
-        return getItemSpecificDependencies(siteId, paths);
     }
 
     @Override
